<resources>
    <string name="app_name">Info Covid-19</string>
    <string name="title_home">Home</string>
    <string name="title_map">Mapa</string>
    <string name="title_country">Paises</string>
    <string name="hometitle">Coronavirus COVID-19</string>
    <string name="totalconfirmados">Total confirmados</string>
    <string name="totalfallecidos">Total fallecidos</string>
    <string name="totalrecuperados">Total recuperados</string>
    <string name="paisesafectados">Paises afectados</string>

    <string name="confirmados">Confirmados</string>
    <string name="fallecidos">Fallecidos</string>
    <string name="activos">Casos activos</string>
    <string name="criticos">Casos críticos</string>
    <string name="dudassugerencias">Dudas? Sugerencias? Escríbeme!</string>
    <string name="casosmillos">Casos por millón \nde habitantes</string>
    <string name="fallecidomillon">Fallecidos por millón\nde habitantes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
